[gd_scene load_steps=13 format=3 uid="uid://dd7c62xnodejm"]

[ext_resource type="Script" uid="uid://bskn3jwbcsb74" path="res://objects/cerberus/electric/laser/laser.gd" id="1_kb2x0"]
[ext_resource type="AudioStream" uid="uid://dahuiu5gdwhtm" path="res://objects/cerberus/electric/sounds/Cerebero-Rayo.wav" id="2_80pf8"]

[sub_resource type="Gradient" id="Gradient_kb2x0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_80pf8"]
gradient = SubResource("Gradient_kb2x0")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_80pf8"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f512p"]
gradient = SubResource("Gradient_80pf8")
width = 1000
height = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fai7n"]
size = Vector2(2366, 20)

[sub_resource type="Animation" id="Animation_kb2x0"]
resource_name = "shot"
length = 0.20001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/sprite_laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_80pf8"]
resource_name = "appear"
length = 0.60001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/sprite_laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.50329),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.507365),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 0.0]
}

[sub_resource type="Animation" id="Animation_f512p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/sprite_laser:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ky7xa"]
resource_name = "disappear"
length = 0.60001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/sprite_laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80pf8"]
_data = {
&"RESET": SubResource("Animation_f512p"),
&"appear": SubResource("Animation_80pf8"),
&"disappear": SubResource("Animation_ky7xa"),
&"shot": SubResource("Animation_kb2x0")
}

[node name="laser" type="Area2D"]
script = ExtResource("1_kb2x0")
shotDirectionPlayer = true
force = 300.0

[node name="sprite" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_80pf8")

[node name="sprite_laser" type="Sprite2D" parent="sprite"]
visible = false
position = Vector2(1197, 0)
scale = Vector2(2.386, 1)
texture = SubResource("GradientTexture2D_f512p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1185, 1)
shape = SubResource("RectangleShape2D_fai7n")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_80pf8")
}
autoplay = "appear"

[node name="timerStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="timerEnd" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="audioRay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_80pf8")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="timerStart" to="." method="_on_timer_start_timeout"]
[connection signal="timeout" from="timerEnd" to="." method="_on_timer_end_timeout"]
